tests/valid/sized_integers/i32_plus_i64.rs
/*
executionExitCode: 9
*/

main(): i32{
    a: i32 = 7;
    b: i64 = 2;
    a = a+b;
    return a;
}