tests/invalid/variables/var_declared_late.rs
/*
fail: 1
*/

main(): i32 {
    a = 1 + 2;
    a: i64;
    return a;
}